--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proyfinal",
-  "homepage": "http://Diego-mayta.github.io/proyfinal",
+  "homepage": "https://diego-mayta.github.io/proyfinal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,8 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
